--- a/api/.prettierrc
+++ b/api/.prettierrc
@@ -1,4 +1,12 @@
 {
+  "jsxSingleQuote": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "semi": true,
+  "tabWidth": 4,
+  "trailingComma": "all",
+  "printWidth": 100,
+  "bracketSameLine": false,
+  "useTabs": true,
+  "arrowParens": "always",
+  "endOfLine": "auto"
 }
