--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
+	"license": "UNLICENSED",
 	"scripts": {
 		"dev": "vite --port 3000 --open",
 		"build": "tsc && vite build",
